# Tiny_Plus

./: .gitignore  CMakeLists.txt  The Tiny Plus Language Definition.md
include/: exceptions.h
include/lex/: lexical.h  token.h
include/syntax/: symbol_table.h  syntax.h  treenode.h
src/: a.txt  b.txt  exceptions.cpp  tiny_plus.cpp
src/lex/: lexical.cpp  token.cpp
src/syntax/: syntax.cpp  treenode.cpp
